Fix truncating text in Android 13 when bold font is selected

--- a/app/assets/styles/blink/_ContactsListBox.scss
+++ b/app/assets/styles/blink/_ContactsListBox.scss
@@ -117,6 +117,17 @@
     textAlign: 'center';
 }
 
+.actionSheetText {
+   width: 100%;
+}
+
+.messageText {
+    font-weight: normal;
+}
+
+.messageTextContainer {
+}
+
 .bubbleContainer {
 }
 
